# mih

./: CMakeLists.txt  README.md  RUN.sh  build commands.txt  dataset_test.h5  dataset_test.mat  mih  mih_knn_results.h5  mih_range_results.h5  mih_results.h5  queries_test.h5  test_range_search.py
include/: memusage.h  mihasher.h  types.h
interface/: linscan_interface.cpp  loadVar.cpp  mih_interface.cpp  saveRes.cpp
src/: mihasher.cpp
